# DarkTraceX

./: .gitignore  Dockerfile  README.md  alembic.ini  install.sh  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_initial.py
plugins/: sample_plugin.py
src/darktracex/: __init__.py  app.py  cli.py  darktracex.tcss  db.py  entities.py  graph.py  investigation.py  models.py  plugin_manager.py  reports.py
src/darktracex.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/darktracex/core/: __init__.py  correlation.py
src/darktracex/modules/: __init__.py  domain.py  email.py  ip.py  organization.py  username.py
tests/: test_config.py  test_modules.py
