[project]
name = "darktracex"
version = "1.0.0"
description = "DarkTrace X: CLI-first Cyber Intelligence and Investigation Operating System."
authors = [ { name = "DarkTrace X Architects", email = "team@darktracex.local" } ]
readme = "README.md"
license = { text = "MIT" }
dependencies = [
    "typer>=0.9.0",
    "rich>=14.0.0",
    "textual>=0.27.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.11.0",
    "requests>=2.31.0",
    "dnspython>=2.4.0",
    "python-whois>=0.8.0",
    "phonenumbers>=8.13.0",
    "networkx>=3.4",
    "pyvis>=0.3.1",
    "reportlab>=4.0.0",
    "matplotlib>=3.8.0",
    "validators>=0.20.0"
]
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Security :: Intelligence"
]

[project.scripts]
darktrace = "darktracex.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["darktracex*"]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"